# aqualizing_bot

./: .gitignore  Dockerfile  Makefile  bot.py  bot.yml  pyproject.toml
app/: config_reader.py  controller.py  dbworker.py
app/handlers/: aqualizing.py  aqualizing_multi.py  bonus_up.py  cancel_process.py  common.py  deposit.py  finder.py  move_che_mo.py  qrcoder.py  refresh.py  report_cli.py
config/: bot.ini
create_docs/: result.xlsx  result_report_cli.xlsx
multi_aqu_doc/: example_multi_aqua.xlsx
multi_aqu_doc/create_docs/: result.xlsx
